WebCore:

2009-07-08  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Simon Fraser.

        Make sure we can click outside the slider thumb and start dragging.
        https://bugs.webkit.org/show_bug.cgi?id=26229

        Previously we were assuming that if the thumb hasn't been clicked, we
        wouldn't issue any value change upon dragging.

        We need to handle the two different cases:
        - Clicked in the thumb, we need to make sure the cursor is always pointing
        the same slider thumb point.
        - Clicked outside, the cursor should always be pointing to the center of
        the thumb.

        For simplicity, we don't remember the original point of the mouse down,
        but an offset between that point and the thumb.

        * rendering/RenderSlider.cpp:
        (WebCore::SliderThumbElement::SliderThumbElement):
        (WebCore::SliderThumbElement::defaultEventHandler):
        (WebCore::RenderSlider::mouseEventOffsetToThumb): Utility function.
        * rendering/RenderSlider.h:

LayoutTests:

2009-07-08  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Simon Fraser.

        Make sure we can click outside the slider thumb and start dragging.
        https://bugs.webkit.org/show_bug.cgi?id=26229

        Along with the events chain, test that the slider value are correct,
        and that clicking outside the slider and dragging works as expected.

        * fast/forms/slider-mouse-events-expected.txt:
        * fast/forms/slider-mouse-events.html:

Canonical link: https://commits.webkit.org/37313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45658 268f45cc-cd09-0410-ab3c-d52691b4dbfc